[gd_scene load_steps=4 format=2]

[ext_resource path="res://Screens/BaseScreen.tscn" type="PackedScene" id=1]
[ext_resource path="res://Screens/GameSelectScreen.gd" type="Script" id=2]
[ext_resource path="res://Screens/AIDifficultyDialog.tscn" type="PackedScene" id=3]

[node name="GameSelectScreen" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="VBoxContainer" parent="MarginContainer" index="0"]
margin_left = 284.0
margin_top = 223.0
margin_right = 740.0
margin_bottom = 545.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 100

[node name="Title" parent="MarginContainer/VBoxContainer" index="0"]
margin_right = 456.0
text = "Select Game Mode"

[node name="Buttons" parent="MarginContainer/VBoxContainer" index="1"]
margin_left = 120.0
margin_top = 132.0
margin_right = 336.0
margin_bottom = 322.0
size_flags_horizontal = 6
size_flags_vertical = 4
custom_constants/separation = 20

[node name="PlayGame" type="Button" parent="MarginContainer/VBoxContainer/Buttons" index="0"]
margin_right = 216.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
text = "Play"

[node name="ConfigButton" type="Button" parent="MarginContainer/VBoxContainer/Buttons" index="1"]
margin_top = 70.0
margin_right = 216.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 50 )
text = "Options"

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer/Buttons" index="2"]
margin_top = 140.0
margin_right = 216.0
margin_bottom = 190.0
rect_min_size = Vector2( 0, 50 )
text = "Back"

[node name="AIDifficultyDialog" parent="." index="2" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 1024.0
margin_bottom = 768.0
[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/PlayGame" to="." method="_on_PlayerGame_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/ConfigButton" to="." method="_on_AIGame_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/Back" to="." method="_on_Back_pressed"]
[connection signal="item_selected" from="AIDifficultyDialog" to="." method="_on_AIDifficultyDialog_item_selected"]
